Product_details_UI done

--- a/src/components/product_info/product_info_css.css
+++ b/src/components/product_info/product_info_css.css
@@ -3,9 +3,26 @@
     padding: 0;
     box-sizing: border-box;
 }
-.image_holder{
-    height: 10vh;
-    max-height: auto;
-    width: 300px;
-    max-width: auto;
-}
+.product-details-container {
+    margin-top: 20px;
+  }
+  
+  .product-image {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .product-name {
+    margin-bottom: 10px;
+  }
+  
+  .product-price {
+    color: #007185; 
+    margin-bottom: 10px;
+  }
+  
+  .product-description {
+    margin-bottom: 20px;
+  }
+  
